src/test/test-models/bad/functions-bad26.stan
functions {
  real bar(real x) {
    real y = x + 2.0;
    return y
  }
}
